dbus: request a name on startup
When the service thread is ready, ask a name to dbus
The advantage of doing that is that client applications
can check dbus for bluez-alsa presence, without having
to implement any kinf of polling logic. Also, this
way, they can be notified on the service exit, to
perform any needed cleanup.
Since there must be an instance of bluealsa daemon
per hci device, the dbus name will be
'org.bluez-alsa.hci0', 'org.bluez-alsa.hci1' ...
and so on.

Signed-off-by: Thierry Bultel <thierry.bultel@iot.bzh>

--- a/configure.ac
+++ b/configure.ac
@@ -130,6 +130,16 @@ AC_ARG_WITH([alsaconfdir],
 		[alsaconfdir="$sysconfdir/alsa/conf.d"],
 		[alsaconfdir="$datadir/alsa/alsa.conf.d"])])
 
+AC_ARG_WITH(dbusconfdir, AC_HELP_STRING([--with-dbusconfdir=PATH],
+	[path to D-Bus config directory]), [path_dbusconf=${withval}],
+		[path_dbusconf="`$PKG_CONFIG --variable=sysconfdir dbus-1`"])
+if (test -z "${path_dbusconf}"); then
+	DBUS_CONFDIR="${sysconfdir}/dbus-1/system.d"
+else
+	DBUS_CONFDIR="${path_dbusconf}/dbus-1/system.d"
+fi
+AC_SUBST(DBUS_CONFDIR)
+
 test "x$prefix" = xNONE && prefix=$ac_default_prefix
 test "x$exec_prefix" = xNONE && exec_prefix=$prefix
 
